tests/paczka1/small_fuzzy/63062333.err
Error in line 2: Hb8ao3 S236 69,7
Error in line 4: Hb8ao3 S490 27,3
Error in line 1: TpG S490 14,6
Error in line 6: Hb8ao3 S236 11,0
Error in line 9: A503 A399 4,8
Error in line 8: TpG A503 28,9
